--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "moment": "^2.29.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-loader-spinner": "^3.1.14",
     "react-moment": "^1.1.1",
     "react-redux": "^7.2.2",
     "react-scripts": "3.4.3",
