--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-redux": "^7.2.2",
     "react-scripts": "3.4.3",
     "redux": "^4.0.5",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "uid2": "^0.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
